Update MesloLGS NF Regular.css

--- a/MesloLGS NF Regular.css
+++ b/MesloLGS NF Regular.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "MesloLGS NF Regular";
+    font-family: "MesloLGS NF";
     src: local("MesloLGS NF Regular"),
          url(.fonts/MesloLGS NF Regular.ttf) format("truetype");
 }
