--- a/MesloLGS NF.css
+++ b/MesloLGS NF.css
@@ -1,4 +1,24 @@
 @font-face {
     font-family: "MesloLGS NF";
-    src: local("MesloLGS NF");
+    font-weight: bold;
+    font-style: italic;
+    src: local("MesloLGS NF Bold Italic"),
+         url(/usr/local/share/fonts/MesloLGS\ NF\ Bold\ Italic.ttf);
+}
+@font-face {
+    font-family: "MesloLGS NF";
+    font-style: italic;
+    src: local("MesloLGS NF Italic"),
+         url(/usr/local/share/fonts/MesloLGS\ NF\ Italic.ttf);
+}
+@font-face {
+    font-family: "MesloLGS NF";
+    font-weight: bold;
+    src: local("MesloLGS NF Bold"),
+         url(/usr/local/share/fonts/MesloLGS\ NF\ Bold.ttf);
+}
+@font-face {
+    font-family: "MesloLGS NF";
+    src: local("MesloLGS NF Regular"),
+         url(/usr/local/share/fonts/MesloLGS\ NF\ Regular.ttf);
 }
